--- a/Packages/dev.hai-vr.lightbox-viewer/Scripts/Editor/LightboxViewer.Editor.asmdef
+++ b/Packages/dev.hai-vr.lightbox-viewer/Scripts/Editor/LightboxViewer.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "LightboxViewer",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
