Add Light Volumes scene: - Add scene to support Light Volumes: https://github.com/REDSIM/VRCLightVolumes   - Scene is baked differently from main scene, as it uses Progressive GPU instead of CPU.   - Scene has inactive lightboxes with Light Volumes disabled. - This scene is selected by default if the Light Volumes package version 0.7.2 or higher is installed.

--- a/Packages/dev.hai-vr.lightbox-viewer/Scripts/Editor/LightboxViewer.Editor.asmdef
+++ b/Packages/dev.hai-vr.lightbox-viewer/Scripts/Editor/LightboxViewer.Editor.asmdef
@@ -10,6 +10,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "red.sim.lightvolumes",
+            "expression": "0.7.2",
+            "define": "LIGHTBOXVIEWER_LIGHTVOLUMES_SUPPORTED"
+        }
+    ],
     "noEngineReferences": false
 }
